
syntax = "proto2";

import "lsm_geoml/pose_pod.proto";
import "ap_psm/reset_origin_type.proto";

package pb.ap_psm.reset_origin_request_port;

message ResetOriginRequestPort{
  optional pb.lsm_geoml.pose_pod.Pose_POD transformation = 1060;
  optional pb.ap_psm.reset_origin_type.ResetOriginType resetOrigin_nu = 2395;
  optional uint32 resetCounter_nu = 2280;
}

message ResetOriginRequestPort_array_port{
   repeated pb.ap_psm.reset_origin_request_port.ResetOriginRequestPort data = 465;
}
