
syntax = "proto2";

import "eco/signal_header.proto";
import "si/dynamic_object_serializable.proto";
import "si/static_object_serializable.proto";

package pb.si.coll_env_model_port;

message CollEnvModelPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional uint32 numberOfStaticObjects_u8 = 186;
  optional uint32 numberOfDynamicObjects_u8 = 3825;
  optional uint32 firstStatObjOutDetZoneIdx_u8 = 2215;
  optional uint32 firstDynObjOutDetZoneIdx_u8 = 1726;
  repeated pb.si.dynamic_object_serializable.DynamicObjectSerializable dynamicObjects = 2076;
  repeated pb.si.static_object_serializable.StaticObjectSerializable staticObjects = 1503;
}

message CollEnvModelPort_array_port{
   repeated pb.si.coll_env_model_port.CollEnvModelPort data = 3597;
}
