
syntax = "proto2";

import "eco/signal_header.proto";
import "si/availability_status.proto";

package pb.si.perception_availability_port;

message PerceptionAvailabilityPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  repeated pb.si.availability_status.AvailabilityStatus statusUSSensors_nu = 3987;
  optional pb.si.availability_status.AvailabilityStatus statusEnvModel_nu = 535;
}

message PerceptionAvailabilityPort_array_port{
   repeated pb.si.perception_availability_port.PerceptionAvailabilityPort data = 3810;
}
