
syntax = "proto2";

package pb.si.static_obj_heigth_type;

enum StaticObjHeigthType {
  SO_HI_UNKNOWN = 0;
  SO_HI_WHEEL_TRAVERSABLE = 1;
  SO_HI_BODY_TRAVERSABLE = 2;
  SO_HI_DOOR_OPENABLE = 3;
  SO_HI_HIGH_OBSTACLE = 4;
  SO_HI_HANGING_OBJECT = 5;
  SO_HI_LOWER_BUMPER_HEIGHT = 6;
  MAX_NUM_HEIGHT_TYPES = 7;
}
